[package]
name = "multitool-hg"
version = "0.1.2"
authors = ["humangrass@gmail.com"]
description = "Useful module for creating services on Rust."
license = "MIT"
repository = "https://github.com/humangrass/multitool"
documentation = "https://docs.rs/multitool-hg"
readme = "README.md"
keywords = ["multitool", "database", "postgresql", "redis", "logger"]
categories = ["web-programming", "development-tools"]
edition = "2021"

[features]
default = ["full"]
logger = ["env_logger", "log", "tracing-subscriber", "serde", "clap"]
database = ["sqlx", "tokio", "log", "anyhow", "serde"]
rediska = ["redis", "serde", "tokio", "anyhow", "bb8", "bb8-redis"]
full = ["logger", "database", "rediska"]

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
anyhow = { version = "1.0.80", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
env_logger = { version = "0.11.5", optional = true }
log = { version = "0.4.22", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
clap = { version = "4.5.19", features = ["derive"], optional = true }
redis = { version = "0.27.5", optional = true }
bb8 = { version = "0.8.6", optional = true }
bb8-redis = { version = "0.17.0", optional = true }
